# nonebot-plugin-ret2shell

./: LICENSE  README.md  pyproject.toml
src/nonebot_plugin_ret2shell/: __init__.py  command.py  config.py  events.py  http_api.py  report.py  send.py  webhook.py  ws_client.py
