[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "nonebot-plugin-ret2shell"
version = "0.0.7"
authors = [
  { name="st7530", email="st7530@outlook.it" },
]
description = "Subscribe to Ret 2 Shell (回归终端) event API and forward messages, also support information inquiry."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "nonebot2>=2.4.3",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-apscheduler>=0.5.0",
    "websockets>=14.0",
    "httpx>=0.23.0"
]

[project.urls]
Homepage = "https://github.com/St7530/nonebot-plugin-ret2shell"
Issues = "https://github.com/St7530/nonebot-plugin-ret2shell/issues"
